import uuid
from datetime import datetime

from sqlalchemy import (
    Boolean,
    CheckConstraint,
    DateTime,
    Enum,
    ForeignKey,
    Integer,
    Numeric,
    String,
    Text,
    func,
)
from sqlalchemy.dialects.postgresql import JSONB, UUID
from sqlalchemy.orm import Mapped, mapped_column, relationship

from app.db.base import Base
from app.models.enums import ApplicationStatus, BusinessStatus, RegistrationStatus


class BusinessRegistration(Base):
    __tablename__ = "business_registration"

    id: Mapped[uuid.UUID] = mapped_column(
        UUID(as_uuid=True), primary_key=True, default=uuid.uuid4
    )
    business_name: Mapped[str] = mapped_column(String(200), nullable=False)
    owner_name: Mapped[str] = mapped_column(String(200), nullable=False)
    owner_email: Mapped[str] = mapped_column(String(255), nullable=False)
    owner_phone: Mapped[str | None] = mapped_column(String(50), nullable=True)
    proposed_address: Mapped[str | None] = mapped_column(Text, nullable=True)
    business_type: Mapped[str | None] = mapped_column(String(100), nullable=True)
    status: Mapped[RegistrationStatus] = mapped_column(
        Enum(RegistrationStatus), default=RegistrationStatus.pending
    )
    application_status: Mapped[ApplicationStatus] = mapped_column(
        Enum(ApplicationStatus), default=ApplicationStatus.draft
    )
    reviewed_by: Mapped[uuid.UUID | None] = mapped_column(
        UUID(as_uuid=True), ForeignKey("user.id"), nullable=True
    )
    reviewed_at: Mapped[datetime | None] = mapped_column(
        DateTime(timezone=True), nullable=True
    )
    rejection_reason: Mapped[str | None] = mapped_column(Text, nullable=True)
    submitted_at: Mapped[datetime | None] = mapped_column(
        DateTime(timezone=True), nullable=True
    )

    documents = relationship(
        "RegistrationDocument",
        back_populates="registration",
        cascade="all, delete-orphan",
    )


class Business(Base):
    __tablename__ = "business"

    id: Mapped[uuid.UUID] = mapped_column(
        UUID(as_uuid=True), primary_key=True, default=uuid.uuid4
    )
    registration_id: Mapped[uuid.UUID | None] = mapped_column(
        UUID(as_uuid=True), ForeignKey("business_registration.id"), unique=True
    )
    business_code: Mapped[str] = mapped_column(String(20), unique=True, nullable=False)
    name: Mapped[str] = mapped_column(String(200), nullable=False)
    status: Mapped[BusinessStatus] = mapped_column(
        Enum(BusinessStatus), default=BusinessStatus.inactive
    )
    timezone: Mapped[str] = mapped_column(String(64), default="Asia/Manila")
    business_type: Mapped[str | None] = mapped_column(String(100), nullable=True)
    logo_url: Mapped[str | None] = mapped_column(Text, nullable=True)
    owner_profile_image_url: Mapped[str | None] = mapped_column(Text, nullable=True)
    display_image_url: Mapped[str | None] = mapped_column(Text, nullable=True)
    theme_settings: Mapped[dict | None] = mapped_column(JSONB, nullable=True)
    setup_completed_at: Mapped[datetime | None] = mapped_column(
        DateTime(timezone=True), nullable=True
    )
    # Tenant classification. Demo Café is research/defense only.
    # Internal test (Dev Lab) is development-only and never is_demo.
    is_demo: Mapped[bool] = mapped_column(
        Boolean, default=False, server_default="false", nullable=False
    )
    is_internal_test: Mapped[bool] = mapped_column(
        Boolean, default=False, server_default="false", nullable=False
    )
    legal_page_url: Mapped[str | None] = mapped_column(String(160), nullable=True)
    terms_content: Mapped[str | None] = mapped_column(Text, nullable=True)
    privacy_content: Mapped[str | None] = mapped_column(Text, nullable=True)
    biometric_consent_content: Mapped[str | None] = mapped_column(Text, nullable=True)
    terms_version: Mapped[str | None] = mapped_column(String(80), nullable=True)
    privacy_version: Mapped[str | None] = mapped_column(String(80), nullable=True)
    biometric_consent_version: Mapped[str | None] = mapped_column(
        String(80), nullable=True
    )
    legal_updated_at: Mapped[datetime | None] = mapped_column(
        DateTime(timezone=True), nullable=True
    )
    created_at: Mapped[datetime] = mapped_column(
        DateTime(timezone=True), server_default=func.now()
    )

    locations = relationship("BusinessLocation", back_populates="business")
    employees = relationship("Employee", back_populates="business")

    __table_args__ = (
        CheckConstraint(
            "NOT (is_demo AND is_internal_test)",
            name="ck_business_demo_internal_test_mutex",
        ),
    )


class BusinessLocation(Base):
    __tablename__ = "business_location"

    id: Mapped[uuid.UUID] = mapped_column(
        UUID(as_uuid=True), primary_key=True, default=uuid.uuid4
    )
    business_id: Mapped[uuid.UUID] = mapped_column(
        UUID(as_uuid=True), ForeignKey("business.id"), nullable=False
    )
    label: Mapped[str] = mapped_column(String(100), default="Main")
    address: Mapped[str] = mapped_column(Text, nullable=False)
    latitude: Mapped[float | None] = mapped_column(Numeric(10, 7), nullable=True)
    longitude: Mapped[float | None] = mapped_column(Numeric(10, 7), nullable=True)
    geofence_radius_m: Mapped[int] = mapped_column(Integer, default=75)
    is_primary: Mapped[bool] = mapped_column(default=True)

    business = relationship("Business", back_populates="locations")
